Revision History
=================

-------------------------------------------------------------------------------
dcm4che 1.0.5 -  - Changes since dcm4che 1.0.4
-------------------------------------------------------------------------------
BUG FIXES:
+ org.dcm4che.srom.HL7Export#toHL7(String..):
  Fix Inconsistence between API and Implementation of String argument order

ENHANCEMENTS:
org.dcm4che.data.Dataset:
+ Float getFloat(tag, index)
+ Double getDouble(tag, index)

CHANGES:
+ ren build target publish to release
+ import TIANI IHE connectathon certficate to trusted cacerts

-------------------------------------------------------------------------------
dcm4che 1.0.4 -  - Changes since dcm4che 1.0.3
-------------------------------------------------------------------------------
BUG FIXES:
+ org.dcm4che.hl7.HL7Segment#id(): Fix StackOverflowError
+ org.dcm4che.net.ActiveAssociation: Fix wrong dispatch of N_CREATE_RQ dimse
  to DcmServiceBase#n_action handler
+ org.dcm4che.srom.SRDocumentFactory#newSRDocument(Dataset):
  Fix NullPointerException for Datasets without
  Content Template Sequence (0040,A504)

ENHANCEMENTS:
org.dcm4che.net.Association:
+ add properties rqTimeout, acTimeout, dimseTimeout
org.dcm4che.server.DcmHandler:
+ add properties rqTimeout, dimseTimeout, soCloseDelay
DcmSnd, MppsSnd:
+ add options --ac-timeout, --dimse-timeout, --so-close-delay
DcmRcv:
+ add options --max-clients, --rq-timeout, --dimse-timeout, --so-close-delay
Hl7Snd, Hl7Rcv:
+ new utilities to send and receive HL7 Messages - using Minimal-Lower-Level
  Protocol.
org.dcm4che.auditlog:
+ new package for support of IHE 4 compliant audit logging

CHANGES:
org.dcm4che.data.Dataset:
+ log warning and ignore attributes with tag < (0004,0000), instead
  throw new IllegalArgumentException
org.dcm4che.net.Association:
+ rename property TCPCloseTimeout to soCloseDelay
+ remove timeout param from connect(), accept(), read()
org.dcm4che.srom.RelationConstraints: